--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><!--[if IE]><link rel="icon" href="/chat-kungfu/favicon.ico"><![endif]--><title>武协的自留地</title><link href=/chat-kungfu/css/app.224ee201.css rel=preload as=style><link href=/chat-kungfu/js/app.29d80bcf.js rel=preload as=script><link href=/chat-kungfu/js/chunk-vendors.55fcb56e.js rel=preload as=script><link href=/chat-kungfu/css/app.224ee201.css rel=stylesheet><link rel=icon type=image/png sizes=32x32 href=/chat-kungfu/img/icons/favicon-32x32.png><link rel=icon type=image/png sizes=16x16 href=/chat-kungfu/img/icons/favicon-16x16.png><link rel=manifest href=/chat-kungfu/manifest.json><meta name=theme-color content=#4DBA87><meta name=apple-mobile-web-app-capable content=no><meta name=apple-mobile-web-app-status-bar-style content=default><meta name=apple-mobile-web-app-title content=chat-kungfu><link rel=apple-touch-icon href=/chat-kungfu/img/icons/apple-touch-icon-152x152.png><link rel=mask-icon href=/chat-kungfu/img/icons/safari-pinned-tab.svg color=#4DBA87><meta name=msapplication-TileImage content=/chat-kungfu/img/icons/msapplication-icon-144x144.png><meta name=msapplication-TileColor content=#000000></head><body><noscript><strong>We're sorry but chat-kungfu doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/chat-kungfu/js/chunk-vendors.55fcb56e.js></script><script src=/chat-kungfu/js/app.29d80bcf.js></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>武协的自留地</title>
+</head>
+
+<body>
+  <script>
+    window.onload = function () {
+      window.location.href = 'https://kungfuboy.github.io/dragon-valley-chat/'
+    }
+  </script>
+</body>
+
+</html>
